kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: villagestay
  labels:
    name: villagestay
    environment: production
